--- a/questions.html
+++ b/questions.html
@@ -7,57 +7,75 @@
     <title>Questions</title>
 </head>
 <body>
+
     <h1>Group Questions</h1>
+<br>
 
-    <h2><a href="">name</a></h2>
+    <h2>Visit his github here ---><a href="https://github.com/BradleyParkerDev"target="blank">Bradley Parker</a></h2>
+    
+    <img src="https://avatars.githubusercontent.com/u/63963480?v=4" alt="">
 
-    <ol>
-        <li>Where were you born?</li>
-        <li>How old are you?</li>
-        <li>What is your favorate car?</li>
-        <li>what is your favorate food?</li>
-        <li>who is your number 1 superhero?</li>
+    <div>
+        <ol>
+            <li>Q: Where were you born?</li>
+                 A: Illinois.
+            <li>Q: How old are you?</li>
+                 A: 31.
+            <li>Q: What is your favorite car?</li>
+                 A: doesnt have one.        
+            <li>Q: What is your favorite hobby?</li>
+                 A: Listening to music?
+            <li>Q: Who is your favorite superhero?</li>
+                 A:Thanos.
+            <li>Q: What's your favorite color?</li>
+                 A: Red.
+            <li>Q: What's you favorite number?</li>
+                 A: 3.
+            <li>Q: What's you favorite food?</li>
+                 A: Watermelon.
+            <li>Q: What's you favorite genre of music?</li>
+                 A: Rap.
+            <li>Q: Why did yo decide to write code?</li>
+                 A: So he can get a job.              
 
+         </ol>
+    </div>
 
+<h2>Visit his github here ---><a href="https://github.com/eis71"target="blank">Edwin Stringer</a></h2>
 
+    <br>
 
+    <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.6435-9/120048480_2771323543124498_2730021708910983131_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=174925&_nc_ohc=_hsHBZDDaPwAX_gs7kr&_nc_ht=scontent-sjc3-1.xx&oh=00_AT9pcVuXjufev3u7alKUcfuzUu8dcz45HQFUbihF4s5UCQ&oe=633CE8C5
+    " alt="">
 
+    <div>
+        <ol>
+            <li>Q: Where were you born?</li>
+                 A: South Carolina  
+            <li>Q: How old are you?</li>
+                 A: 27
+            <li>Q: What is your favorite car?</li>
+                 A: Toyota Tacoma
+            <li>Q: What is your favorite hobby?</li>
+                 A: Lifting heavy thing and putting them back down?
+            <li>Q: Who is your favorite superhero?</li>
+                 A: Spiderman.
+            <li>Q: What's your favorite color?</li>
+                 A: Black
+            <li>Q: What's you favorite number?</li>
+                 A: 71
+            <li>Q: What's you favorite food?</li>
+                 A: Rice
+            <li>Q: What's you favorite genre of music?</li>
+                 A: Rock and Roll
+            <li>Q: Why did yo decide to write code?</li>
+                 A: Money lots and lots of money!!!!!!                   
+               
+         </ol>        
+    </div>  
 
-
-    </ol>
-
-    <h2><a href="">name</a></h2>
-
-    <ol>
-        <li>Where were you born?</li>
-        <li>How old are you?</li>
-        <li>What is your favorate car?</li>
-        <li>what is your favorate food?</li>
-        <li>who is your number 1 superhero?</li>
-
-
-
-
-
-
-
-    </ol>
-
-    <h2><a href="">name</a></h2>
-
-    <ol>
-        <li>Where were you born?</li>
-        <li>How old are you?</li>
-        <li>What is your favorate car?</li>
-        <li>what is your favorate food?</li>
-        <li>who is your number 1 superhero?</li>
-
-
-
-
-
-
-
-    </ol>
 </body>
 </html>
+
+
+
