--- a/questions.html
+++ b/questions.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questions</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -13,7 +14,7 @@
 
     <h2>Visit his github here ---><a href="https://github.com/BradleyParkerDev"target="blank">Bradley Parker</a></h2>
     
-    <img src="https://avatars.githubusercontent.com/u/63963480?v=4" alt="">
+    <img height="200" width="auto" src="https://avatars.githubusercontent.com/u/63963480?v=4" alt="">
 
     <div>
         <ol>
@@ -45,7 +46,7 @@
 
     <br>
 
-    <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.6435-9/120048480_2771323543124498_2730021708910983131_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=174925&_nc_ohc=_hsHBZDDaPwAX_gs7kr&_nc_ht=scontent-sjc3-1.xx&oh=00_AT9pcVuXjufev3u7alKUcfuzUu8dcz45HQFUbihF4s5UCQ&oe=633CE8C5
+    <img height="200" width="auto" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.6435-9/120048480_2771323543124498_2730021708910983131_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=174925&_nc_ohc=_hsHBZDDaPwAX_gs7kr&_nc_ht=scontent-sjc3-1.xx&oh=00_AT9pcVuXjufev3u7alKUcfuzUu8dcz45HQFUbihF4s5UCQ&oe=633CE8C5
     " alt="">
 
     <div>
