--- a/questions.html
+++ b/questions.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,76 +8,84 @@
     <title>Questions</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+<body background=r url()>
 
     <h1>Group Questions</h1>
-<br>
+    <br>
 
-    <h2>Visit his github here ---><a href="https://github.com/BradleyParkerDev"target="blank">Bradley Parker</a></h2>
-    
-    <img height="200" width="auto" src="https://avatars.githubusercontent.com/u/63963480?v=4" alt="">
+    <h2>Visit his github here ---><a href="https://github.com/BradleyParkerDev " target="blank ">Bradley Parker</a></h2>
+
+    <img height="200 " width="auto " src="https://avatars.githubusercontent.com/u/63963480?v=4 " alt=" ">
 
     <div>
         <ol>
             <li>Q: Where were you born?</li>
-                 A: Illinois.
+            A: Illinois.
             <li>Q: How old are you?</li>
-                 A: 31.
+            A: 31.
             <li>Q: What is your favorite car?</li>
-                 A: doesnt have one.        
+            A: doesnt have one.
             <li>Q: What is your favorite hobby?</li>
-                 A: Listening to music?
+            A: Listening to music?
             <li>Q: Who is your favorite superhero?</li>
-                 A:Thanos.
+            A:Thanos.
             <li>Q: What's your favorite color?</li>
-                 A: Red.
+            A: Red.
             <li>Q: What's you favorite number?</li>
-                 A: 3.
+            A: 3.
             <li>Q: What's you favorite food?</li>
-                 A: Watermelon.
+            A: Watermelon.
             <li>Q: What's you favorite genre of music?</li>
-                 A: Rap.
+            A: Rap.
             <li>Q: Why did yo decide to write code?</li>
-                 A: So he can get a job.              
+            A: So he can get a job.
 
-         </ol>
+        </ol>
     </div>
 
-<h2>Visit his github here ---><a href="https://github.com/eis71"target="blank">Edwin Stringer</a></h2>
+    <h2>Visit his github here ---><a href="https://github.com/eis71 " target="blank ">Edwin Stringer</a></h2>
 
     <br>
 
-    <img height="200" width="auto" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.6435-9/120048480_2771323543124498_2730021708910983131_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=174925&_nc_ohc=_hsHBZDDaPwAX_gs7kr&_nc_ht=scontent-sjc3-1.xx&oh=00_AT9pcVuXjufev3u7alKUcfuzUu8dcz45HQFUbihF4s5UCQ&oe=633CE8C5
-    " alt="">
+    <img height="200 " width="auto " src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.6435-9/120048480_2771323543124498_2730021708910983131_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=174925&_nc_ohc=_hsHBZDDaPwAX_gs7kr&_nc_ht=scontent-sjc3-1.xx&oh=00_AT9pcVuXjufev3u7alKUcfuzUu8dcz45HQFUbihF4s5UCQ&oe=633CE8C5
+    " alt=" ">
 
     <div>
         <ol>
             <li>Q: Where were you born?</li>
-                 A: South Carolina  
+            A: South Carolina
             <li>Q: How old are you?</li>
-                 A: 27
+            A: 27
             <li>Q: What is your favorite car?</li>
-                 A: Toyota Tacoma
+            A: Toyota Tacoma
             <li>Q: What is your favorite hobby?</li>
-                 A: Lifting heavy thing and putting them back down?
+            A: Lifting heavy thing and putting them back down?
             <li>Q: Who is your favorite superhero?</li>
-                 A: Spiderman.
+            A: Spiderman.
             <li>Q: What's your favorite color?</li>
-                 A: Black
+            A: Black
             <li>Q: What's you favorite number?</li>
-                 A: 71
+            A: 71
             <li>Q: What's you favorite food?</li>
-                 A: Rice
+            A: Rice
             <li>Q: What's you favorite genre of music?</li>
-                 A: Rock and Roll
+            A: Rock and Roll
             <li>Q: Why did yo decide to write code?</li>
-                 A: Money lots and lots of money!!!!!!                   
-               
-         </ol>        
-    </div>  
+            A: Money lots and lots of money!!!!!!
+
+        </ol>
+    </div>
 
 </body>
+<!-- TO add back ground img oto background add the following so it doesnt repeat and its fixed to the page.-->
+<style>
+    body {
+        background-image: url('https://cdn.vox-cdn.com/thumbor/2webHreBN1FVME8r13RUiWkCgvw=/0x0:2160x1215/1820x1213/filters:focal(923x317:1267x661):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/71333676/highlights_2_1080_2x_c11e10b5.0.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+    }
+</style>
+
 </html>
-
-
-
