update questions.html file

--- a/questions.html
+++ b/questions.html
@@ -11,7 +11,7 @@
 
 <body background=r url()>
 
-    <h1>Group Questions</h1>
+    <h1>Group Questions!!</h1>
     <br>
 
     <h2>Visit his github here ---><a href="https://github.com/BradleyParkerDev " target="blank ">Bradley Parker</a></h2>
